<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

        <Button
            android:id="@+id/btnSelectFile"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/select_file"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/data_to_bytes"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtVInputOutputStream"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

        </LinearLayout>


        <ImageView
            android:id="@+id/img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/img" />

</LinearLayout>
</layout>